[package]
name = "tmux-switcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tmux_interface = "0.2.1"
skim = "0.10.2"
dirs = "5.0.0"
itertools = "0.10.3"
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
quickcfg = { path = "../quickcfg"}
