[package]
name = "tmux-switcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tmux_interface = "0.2.1"
dirs = "5.0.0"
crossterm = "0.28.1"
anyhow = "1.0.95"
itertools = "0.14.0"
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
quickcfg = { git = "https://github.com/emilycares/quickcfg", rev = "accb5fe7c070e8eb15fc7dab0197dc27003a5a81" }
clap = { version = "4", features = ["derive"] }
